# Auto-SRE-Environment

./: .env.example  Dockerfile  Makefile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  env.py  grader.py  rewards.py  tasks.py  types.py
tests/: test_api.py  test_env.py  test_grader.py  test_rewards.py  test_tasks.py  test_types.py
